move the order select to the left

--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,15 @@ Login & register page
 }
 
 /* ----------------
+Dashboard page
+ -------------------*/
+#selectOrderBox {
+  position: absolute;
+  display: inline-block;
+  left: 20px;
+}
+
+/* ----------------
 Footer section
  -------------------*/
 #footer .copyright {
