--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,23 @@ input.form-control:focus {
 }
 /*---- end of circular progressbar ----*/
 
+/*---- custom modal ----*/
+.modal .modal-content {
+  background: #061733;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  color: white;
+}
+.modal .close {
+  color: #f1f1f1;
+}
+.modal .modal-header {
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.2);
+}
+.modal .modal-footer {
+  border-top: 0.5px solid rgba(255, 255, 255, 0.2);
+}
+/*---- end of custom modal ----*/
+
 /*---- proxies list style ----*/
 .list-proxies {
   list-style-type: none;
